# medialab-orchestrator

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/memory/: MEMORY.md  build-state.md  impl-decisions.md  service-identity.md  source-of-truth.md
.github/workflows/: ci.yml
src/medialab_orchestrator/: __init__.py  main.py
src/medialab_orchestrator/clients/: __init__.py  base.py  jellyfin.py  torrent_downloader.py
src/medialab_orchestrator/core/: auth.py  config.py  deps.py  errors.py  logger.py  middleware.py
src/medialab_orchestrator/routers/: gateway.py  search.py  system.py  webhooks.py
src/medialab_orchestrator/schemas/: errors.py  jobs.py
src/medialab_orchestrator/scripts/: notify_complete.py
src/medialab_orchestrator/services/: __init__.py  metadata.py  rename.py  worker.py
src/medialab_orchestrator/store/: __init__.py  jobs.py
tests/: conftest.py  test_gateway.py  test_job_store.py  test_metadata.py  test_notify_complete.py  test_rename.py  test_webhook_and_health.py  test_worker.py
